--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: essence
-Title: What the Package Does (One Line, Title Case)
+Title: Interface to TN ESSENCE
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Jesse",
+           family = "Smith",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "jesse.smith@shelbycountytn.com")
+Description: {essence} provides an R interface to select data from the TN
+    ESSENCE platform.
 License: MIT + file LICENSE
+URL: https://github.com/jesse-smith/essence
+BugReports: https://github.com/jesse-smith/essence/issues
 Suggests: 
     covr,
     testthat (>= 3.0.0)
@@ -17,5 +19,3 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-URL: https://github.com/jesse-smith/essence
-BugReports: https://github.com/jesse-smith/essence/issues
