--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,12 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    vctrs (>= 0.3.0),
+    keyring (>= 1.0.0),
+    checkmate (>= 2.0.0),
+    rlang (>= 0.4.0),
+    tibble (>= 3.0.0),
+    purrr (>= 0.3.0)
+Depends: 
+    R (>= 2.10)
