--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,4 +28,12 @@ export(scrt_set_secrets)
 export(scrt_unlock)
 export(secret)
 import(vctrs)
+importFrom(data.table,":=")
+importFrom(data.table,.BY)
+importFrom(data.table,.EACHI)
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,.NGRP)
+importFrom(data.table,.SD)
 importFrom(tibble,"%>%")
