Export `es_fields()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(as_secret)
 export(es_creds_get)
 export(es_creds_set)
 export(es_datasources)
+export(es_fields)
 export(es_values)
 export(is_secret)
 export(scrt_lock)
