Create timeseries query function `es_ts()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(es_creds_get)
 export(es_creds_set)
 export(es_datasources)
 export(es_fields)
+export(es_ts)
 export(es_values)
 export(is_secret)
 export(scrt_lock)
